Pages/SRC/srcstyles.css
/* ... */
@media screen and (min-width: 1600px) {
  html {
    font-size: 80%;
    overflow-x: hidden;
    color: #ffffff;
    background-color: #04020e;
    font-family: "Aileron";
  }

  p.newlecture {
    font-family: "Aileron";
    font-weight: 500;
    font-size: 2.5rem;
    margin-left: 100px;
    margin-top: 30vh;
    margin-left: 65px;
    margin-right: 100px;
    color: #ffffff;
    text-align: left;
  }

  .media-scroller {
    --_spacer: 15px;
    display: grid;
    gap: var(--_spacer);
    grid-auto-flow: column;
    grid-auto-columns: 18%;

    padding: 0 var(--_spacer) var(--_spacer);

    overflow-x: auto;
    overscroll-behavior-inline: contain;
    background-color: #04020e00;
  }

  .media-scroller--with-groups {
    grid-auto-columns: 80%;
  }

  .media-group {
    display: grid;
    gap: var(--_spacer);
    grid-auto-flow: column;
  }

  .media-element {
    display: grid;

    gap: 8px;
    background: rgb(4, 2, 14);
    background: linear-gradient(
      180deg,
      rgba(4, 2, 14, 1) 69%,
      rgba(205, 21, 43, 1) 100%
    );
    border-radius: 3px;
    box-shadow: var(--shadow-2);
    height: 60vh;
    transition: 0.4s ease-in-out;
    cursor: pointer;
  }

  .media-element:hover {
    display: grid;
    background: rgb(4, 2, 14);
    background: linear-gradient(
      180deg,
      rgba(4, 2, 14, 1) 69%,
      rgba(205, 21, 43, 1) 100%
    );
    border-radius: 3px;
    box-shadow: var(--shadow-2);
    height: 60vh;
  }

  .media-element > img {
    inline-size: 100%;
    height: 40vh;
    object-fit: cover;
    object-position: center;
    float: bottom;
    border-radius: 3px;
    transition: 0.25s ease-out;
  }

  .media-element:hover img {
    inline-size: 100%;
    height: 40vh;
    object-fit: cover;
    object-position: center;
    float: bottom;
    border-radius: 3px;
  }

  p.title {
    font-family: "Aileron";
    font-size: 2.8rem;
    font-weight: 600;
    padding-left: 10px;
  }

  p.title2 {
    font-family: "Aileron";
    font-size: 2rem;
    font-weight: 300;
    padding-left: 10px;
    padding-bottom: 10px;
  }
}

@media (pointer: coarse) and (not (all) and (-webkit-min-device-pixel-ratio:0)) {
  .media-scroller {
    --_spacer: 15px;
    display: grid;
    gap: var(--_spacer);
    grid-auto-flow: row;
    grid-auto-columns: 18%;
  
    padding: 0 var(--_spacer) var(--_spacer);
  
    overflow-x: auto;
    overscroll-behavior-inline: contain;
    background-color: #04020e00;
  }
  
  .media-scroller--with-groups {
    grid-auto-columns: 80%;
  }
  
  .media-group {
    display: grid;
    gap: var(--_spacer);
    grid-auto-flow: row;
  }
  
  .media-element {
    display: grid;
  
    gap: 10px;
    background: #222222;
    border-radius: 3px;
    box-shadow: var(--shadow-2);
    height: 350px;
    transition: 0.4s ease-in-out;
    cursor: pointer;
  }
  
  .media-element:hover {
    display: grid;
    background: #cd152b;
    border-radius: 3px;
    box-shadow: var(--shadow-2);
    height: 350px;
  }
  
  .media-element > img {
    inline-size: 100%;
    height: 250px;
    object-fit: cover;
    object-position: center;
    float: bottom;
    border-radius: 3px;
    transition: 0.25s ease-out;
  }
  
  .media-element:hover img {
    inline-size: 100%;
    height: 280px;
    object-fit: cover;
    object-position: center;
    float: bottom;
    border-radius: 3px;
  }
  
  h4 {
    font-family: "Satoshi";
    font-weight: 900;
    font-size: 7rem;
    padding-top: 10rem;
    padding-bottom: 3.5rem;
    padding-left: 15px;
    mix-blend-mode: exclusion;
  }
  
  p.title {
    font-family: "Aileron";
    font-size: 2rem;
    font-weight: 600;
    padding-left: 10px;
  }
  
  p.title2 {
    font-family: "Aileron";
    font-size: 1.3rem;
    font-weight: 300;
    padding-left: 10px;
    padding-bottom: 10px;
  }
  
  .snaps-inline {
    scroll-snap-type: inline mandatory;
    scroll-padding-inline: var(--_spacer, 1rem);
  }
  
  .snaps-inline > * {
    scroll-snap-align: start;
  }
}

